src/objects/SFDC_Setup_Audit_Trail_Config__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Bulk_Batch_ID__c</fullName>
        <label>Bulk Batch ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Job_ID__c</fullName>
        <label>Bulk Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Group_Id__c</fullName>
        <label>Chatter Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_to_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post to Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>token__c</fullName>
        <label>token</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <type>Email</type>
    </fields>
    <label>SFDC Setup Audit Trail Config</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFDC Setup Audit Trail Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>